--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "Chuck Waltz",
   "license": "MIT",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.8",
+    "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
